updated ecj version & changed flags. sealed class attributes are now compiled correctly